index bootstrap improvements

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,23 +22,24 @@
 	<body>
 
 		<br>
-
-		<a href="/users">Return to the list (For Martin: delete later)</a>
+		<a href="/users" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Return to the list (For Martin: delete later)</a>
 		<br>
 		<br>
-		<a href="/user/new">Create User</a>
+		<a href="/user/new" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create User</a>
 		<br>
 		<br>
-		<a href="/skills">Find Skills</a>
+		<a href="/skills" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Find Skills</a>
 		<br>
 		<br>
-		<a href="/">My Skills</a>
+		<a href="/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">My Skills</a>
 		<br>
 		<br>
-		<a href="/">Log Out</a>
+		<a href="/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Log Out</a>
 		<br>
 		<br>
-		<a href="/">To Index (delete later; test jump)</a>
+		<a href="/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">To Index (delete later; test jump)</a>
+		<br>
+		<br>
 
 
 
