--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -29,7 +29,7 @@
 					<li class="nav-item"><a class="nav-link" href="#">My
 							Skills </a></li>
 							<!-- Link auf View user profile -->
-					<li class="nav-item"><a class="nav-link" href="users/create"> Login/Register
+					<li class="nav-item"><a class="nav-link" href="/user/new"> Login/Register
 					</a></li>
 				</ul>
 			</div>
