Fix edit user template

--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -70,7 +70,7 @@
 			<div class="form-group">
 				<label for="user-last-name">Last name</label> <input type="text"
 					class="form-control" id="lastName" name="lastName"
-					placeholder="Bauer" required th:field="*{firstName}">
+					placeholder="Bauer" required th:field="*{lastName}">
 			</div>
 
 
