--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -148,7 +148,7 @@
 		
 				<div class="form-group">
 					<label for="imageURL">Upload your foto</label>
-					 <input type="file" class="form-control-file" id="imageURL" name="imageURL" required
+					 <input type="text" class="form-control-file" id="imageURL" name="imageURL" 
 				th:field="*{imageURL}">
 				</div>
 	
