--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -15,8 +15,7 @@
 
 <body>
 
-	<header th:replace="fragments.html :: top">Here goes the
-		header</header>
+	<header th:replace="fragments.html :: top">Here goes the header</header>
 
 	<!-- <main>
 		<div class="jumbotron">
