small error correction: type=text and not test: Now the picture x.png is working

--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -148,7 +148,7 @@
 		
 				<div class="form-group">
 					<label for="imageURL">Upload your foto</label>
-					 <input type="test" class="form-control-file" id="imageURL" name="imageURL" 
+					 <input type="text" class="form-control-file" id="imageURL" name="imageURL" 
 				th:field="*{imageURL}">
 				</div>
 	
