--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -29,140 +29,141 @@
 	<main>
 
 
-	<body>
-	<div class="container-edit"></div>
-		<h3 class="h3edit" th:text="${user.id} ? 'Edit your profile' : 'Create your profile'">User2</h3>
+		<body>
+			<div class="container-edit"></div>
+			<h3 class="h3edit"
+				th:text="${user.id} ? 'Edit your profile' : 'Create your profile'">User2</h3>
 
-		<form method="post" th:action="@{/user/upsert}" th:object="${user}">
-			<input name="id" th:field="*{id}" type="hidden">
+			<form method="post" th:action="@{/user/upsert}" th:object="${user}">
+				<input name="id" th:field="*{id}" type="hidden">
 
 
-			<!-- userName
+				<!-- userName
 			<label for="userName">User name:</label> <input id="userName"
 				name="userName" placeholder="Pottylein" required
 				th:field="*{userName}" type="text"> <br> <br>-->
 
-			<div class="form-group">
-				<label for="userName">User name</label> <input type="text"
-					class="form-control" id="userName" name="userName"
-					placeholder="steffi216" required th:field="*{userName}">
-			</div>
+				<div class="form-group">
+					<label for="userName">User name</label> <input type="text"
+						class="form-control" id="userName" name="userName"
+						placeholder="steffi216" required th:field="*{userName}">
+				</div>
 
-			<!-- first name
+				<!-- first name
 			<label for="user-first-name">First name:</label> 
 			<input id="user-first-name" name="firstName" placeholder="Harry" required
 				th:field="*{firstName}" type="text"> <br> <br>-->
 
 
-			<div class="form-group">
-				<label for="user-first-name">First name</label> <input type="text"
-					class="form-control" id="firstName" name="firstName"
-					placeholder="Stephanie" required th:field="*{firstName}">
-			</div>
+				<div class="form-group">
+					<label for="user-first-name">First name</label> <input type="text"
+						class="form-control" id="firstName" name="firstName"
+						placeholder="Stephanie" required th:field="*{firstName}">
+				</div>
 
 
-			<!-- last name
+				<!-- last name
 			<label for="user-last-name">Last name:</label> <input
 				id="user-last-name" name="lastName" placeholder="Potter" required
 				th:field="*{lastName}" type="text"> <br> <br>-->
 
 
-			<div class="form-group">
-				<label for="user-last-name">Last name</label> <input type="text"
-					class="form-control" id="lastName" name="lastName"
-					placeholder="Bauer" required th:field="*{lastName}">
-			</div>
+				<div class="form-group">
+					<label for="user-last-name">Last name</label> <input type="text"
+						class="form-control" id="lastName" name="lastName"
+						placeholder="Bauer" required th:field="*{lastName}">
+				</div>
 
 
-			<!-- zip code
+				<!-- zip code
 			<label for="zip-code">Zip Code:</label> <input id="zip-code"
 				name="zipCode" placeholder="12345" required th:field="*{zipCode}"
 				type="number"> <br> <br>-->
 
-			<div class="form-group">
-				<label for="zip-code">Zip code</label> <input type="text"
-					class="form-control" id="zip-code" name="zipName"
-					placeholder="90427" required th:field="*{zipCode}">
-			</div>
+				<div class="form-group">
+					<label for="zip-code">Zip code</label> <input type="text"
+						class="form-control" id="zip-code" name="zipName"
+						placeholder="90427" required th:field="*{zipCode}">
+				</div>
 
 
-			<!-- city 
+				<!-- city 
 			<label for="city">City:</label> <input id="city" name="city"
 				placeholder="Bonn" th:field="*{city}" type="text"> <br>
 			<br>-->
 
-			<div class="form-group">
-				<label for="City">City</label> <input type="text"
-					class="form-control" id="city" name="city" placeholder="Nürnberg"
-					required th:field="*{city}">
-			</div>
+				<div class="form-group">
+					<label for="City">City</label> <input type="text"
+						class="form-control" id="city" name="city" placeholder="Nürnberg"
+						required th:field="*{city}">
+				</div>
 
 
-			<!-- birthday
+				<!-- birthday
 			<label for="dateOfBirth">Birthday:</label> 
 			<input id="dateOfBirth"
 				name="dateOfBirth" placeholder="1980-07-31" required
 				th:field="*{dateOfBirth}" type="date"> <br> <br> -->
 
-			<div class="form-group">
-				<label for="dateOfBirth">Birthday</label> <input type="date"
-					class="form-control" id="dateOfBirth" name="dateOfBirth"
-					placeholder="1995-06-21" required th:field="*{dateOfBirth}">
-			</div>
+				<div class="form-group">
+					<label for="dateOfBirth">Birthday</label> <input type="date"
+						class="form-control" id="dateOfBirth" name="dateOfBirth"
+						placeholder="1995-06-21" required th:field="*{dateOfBirth}">
+				</div>
 
-			<!-- email
+				<!-- email
 			<label for="email">Email:</label> <input id="email" name="email"
 				placeholder="Potter@hogwards.com" required th:field="*{email}"
 				type="text"> <br> <br>-->
 
 
-			<div class="form-group">
-				<label for="email">Email address</label> <input type="email"
-					class="form-control" id="email" aria-describedby="emailHelp"
-					name="email" placeholder="stephanie.bauer@telekom.de" required
-					th:field="*{email}"> <small id="emailHelp"
-					class="form-text text-muted">We'll never share your email
-					with anyone else.</small>
-			</div>
+				<div class="form-group">
+					<label for="email">Email address</label> <input type="email"
+						class="form-control" id="email" aria-describedby="emailHelp"
+						name="email" placeholder="stephanie.bauer@telekom.de" required
+						th:field="*{email}"> <small id="emailHelp"
+						class="form-text text-muted">We'll never share your email
+						with anyone else.</small>
+				</div>
 
 
-			<!-- description
+				<!-- description
 			<label for="user-description">Description:</label>
 			<textarea id="user-description" name="description"
 				th:field="*{description}"></textarea>
 			<br> <br> -->
 
 
-			<div class="form-group">
-				<label for="user-description">Description</label>
-				<textarea class="form-control" id="user-description"
-					name="description" th:field="*{description}" rows="3"></textarea>
-			</div>
+				<div class="form-group">
+					<label for="user-description">Description</label>
+					<textarea class="form-control" id="user-description"
+						name="description" th:field="*{description}" rows="3"></textarea>
+				</div>
 
-			<!-- imageURL
+				<!-- imageURL
 			<label for="imageURL">Image URL (placeholder):</label> <input
 				id="imageURL" name="imageURL" placeholder="Place holder..." required
 				th:field="*{imageURL}" type="text"> <br> <br>-->
 
 
-		
+
 				<div class="form-group">
-					<label for="imageURL">Upload your foto</label>
-					 <input type="text" class="form-control-file" id="imageURL" name="imageURL" 
-				th:field="*{imageURL}">
+					<label for="imageURL">Upload your foto</label> <input type="text"
+						class="form-control-file" id="imageURL" name="imageURL"
+						th:field="*{imageURL}">
 				</div>
-	
 
 
-			<button type="submit" value="Submit" class="btn btn-primary edit">Submit</button>
-		
 
-		<!--<a href="/users">Return to the list</a>
+				<button type="submit" value="Submit" class="btn btn-primary edit">Submit</button>
+
+
+				<!--<a href="/users">Return to the list</a>
 		<br>
 		<br>
 		<a href="/">Return to the index</a>-->
-	</body>
-	</div>
+		</body>
+		</div>
 
 	</main>
 
