--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 		<a href="/users" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Return to the list (For Martin: delete later)</a>
 		<br>
 		<br>
-		<a href="/user/new" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create User</a>
+		<a href="/user/edit" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create User</a>
 		<br>
 		<br>
 		<a href="/skills" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Find Skills</a>
