--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -29,8 +29,8 @@
     <input name="id" th:field="*{id}" type="hidden">
 
     <div class="form-group">
-      <label for="userName">User name</label> <input type="text" class="form-control" id="userName"
-        name="userName" placeholder="steffi216" required th:field="*{userName}">
+      <label for="userName">User name</label> <input type="text" class="form-control" id="userName" name="userName"
+        placeholder="steffi216" required th:field="*{userName}">
     </div>
 
     <div class="form-group">
@@ -60,8 +60,8 @@
 
     <div class="form-group">
       <label for="email">Email address</label> <input type="email" class="form-control" id="email"
-        aria-describedby="emailHelp" name="email" placeholder="stephanie.bauer@telekom.de" required
-        th:field="*{email}"> <small id="emailHelp" class="form-text text-muted">We'll never share your email
+        aria-describedby="emailHelp" name="email" placeholder="stephanie.bauer@telekom.de" required th:field="*{email}">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email
         with anyone else.</small>
     </div>
 
@@ -91,9 +91,15 @@
     <button type="submit" value="Submit" class="btn btn-primary edit">Submit</button>
   </form>
 
+  <form th:if="${userForm.id != null}" method="get" th:action="@{/user/delete}" th:object="${userForm}">
+    <input name="id" th:field="*{id}" type="hidden">
+
+    <button type="submit" value="Submit" class="btn btn-danger">Permanently delete my Account</button>
+  </form>
+
   <br> <br> <a href="/">Return to the index</a>
 
-<footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
+  <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
 
 </body>
