--- a/src/main/resources/templates/users/get_all.html
+++ b/src/main/resources/templates/users/get_all.html
@@ -36,7 +36,7 @@ th, td {
 </style>
 <body>
 	<h3>Users list (page to test)</h3>
-	<a href="/user/new">Add a new user !</a>
+	<a href="/user/edit">Add a new user !</a>
 	<br>
 	<br>
 	<table>
@@ -47,7 +47,7 @@ th, td {
 				<th>First name</th>
 				<th>Last name</th>
 				<th>Birthday</th>
-				<th>Zip code</th>
+				<th>ZipCode</th>
 				<th>City</th>
 				<th>Email</th>
 				<th>Description</th>
