some small changes - but important to change User-Data; e.g. Email...

--- a/src/main/resources/templates/user/deleted.html
+++ b/src/main/resources/templates/user/deleted.html
@@ -31,6 +31,10 @@
     <a href="/" class="btn btn-secondary">Back to Homepage</a>
     <br>
 		<br>
+		<br>
+		<a href="/users" class="btn btn-secondary">Return to the list (For Martin: delete later)</a>
+		<br>
+		<br>
   </main>
 
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
