--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -29,15 +29,8 @@
     <input name="id" th:field="*{id}" type="hidden">
 
     <div class="form-group">
-    
-     
       <label for="userName">User name</label> <input type="text" class="form-control" id="userName"
         name="userName" placeholder="steffi2020 aus edit.html ;-)" required th:field="*{userName}">
-        
-        <!-- 
-      <label for="userName">User name</label> <input type="text" class="form-control" id="userName"
-      name="userName"
-        placeholder="steffi216" required th:field="*{userName}"> -->
     </div>
 
     <div class="form-group">
@@ -68,10 +61,9 @@
     <div class="form-group">
       <label for="email">Email address</label> <input type="email" class="form-control" id="email"
         aria-describedby="emailHelp" name="email" placeholder="stephanie.bauer@telekom.de" required th:field="*{email}">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email
-        with anyone else.</small>
+      <small id="email" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
-
+  
     <div class="form-group">
       <label for="user-description">Description</label>
       <textarea class="form-control" id="user-description" name="description" th:field="*{description}"
@@ -81,7 +73,8 @@
     <div class="form-group">
       <label for="imageURL">Upload your Photo</label> <input type="text" class="form-control-file" id="imageURL"
         name="imageURL" th:field="*{imageURL}">
-    </div>
+    </div>   
+    
 
     <ul>
       <li th:each="userSkillLevel : *{userSkillLevels}">
