--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -29,9 +29,10 @@
 	</div> -->
 
 	<section>
+	<div class="flex-container">
 		<div class="container cards">
 			<div class="row no-gutters">
-				<div class="card" style="width: 18rem;">
+				<div class="card" style="width: 28rem;">
 					<img class="card-img-top" th:src="@{${'/images/' + user.imageURL}}"
 						alt="Card image cap">
 					<div class="card-body">
@@ -49,6 +50,7 @@
 							class="btn btn-primary">Back</a>
 					</div>
 				</div>
+			</div>
 			</div>
 
 		</div>
