cards small again...: change in css

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -94,21 +94,26 @@ ul {
 .card-body {
   margin-left: 2rem;
   font-size: 24px;
-  
 }
+
+
 
 .card-title {
 	font-size: 36px;
 }
 
+
+/*
 .card {
 	min-width: 50%;
 }
+*/
 
+/*
 .flex-container{
 	allign-items: center;
 	justify-content: center;
 }
-
+*/
 
 
