--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,9 +31,16 @@
 
 					<li class="nav-item"><a class="nav-link" href="#">My
 							Skills </a></li>
-							<!-- Link auf View user profile -->
-					<li class="nav-item"><a class="nav-link" href="/user/new"> Login/Register
+							
+					<li class="nav-item"><a class="nav-link" href="/user/new"> Login
 					</a></li>
+					
+					<li class="nav-item"><a class="nav-link" href="/user/new"> Logout
+					</a></li>
+					
+					<li class="nav-item"><a class="nav-link" href="user/edit"> Register
+					</a></li>
+				
 				</ul>
 			</div>
 		</nav>
