Delete attribute userName

--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -48,7 +48,7 @@
 							<img class="card-img-top"
 								th:src="@{${'/images/' + user.imageURL}}" alt="Card image cap">
 							<div class="card-body">
-								<h5 th:text="|${user.userName}|" class="card-title">Name</h5>
+								<h5 th:text="|${user.firstName}|" class="card-title">Name</h5>
 								<p class="card-text"></p>
 								<ul>
 									<li th:text="|Firstname: ${user.firstName}|">Name</li>
