--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -51,7 +51,7 @@
 							th:src="@{${'/images/' + user.imageURL}}" alt="Card image cap">
 						<!--src="../images/th:text="${user.imageURL}"-->
 						<div class="card-body">
-							<h5 th:text="${user.userName}" class="card-title">Name</h5>
+							<h5 th:text="${user.firstName}" class="card-title">Name</h5>
 							<p class="card-text">
 							<ul>
 								<li th:text="|Age: ${user.age}|">Age</li>
