--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,42 +2,81 @@
 
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 
+
 <head>
-  <title>SkillHub</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/style.css">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+<!--  Noch rein ????????????????????????????????????????????????????????????
+   <head th:include="layout :: head(title=~{::title},links=~{})">
+   -->
+
+<title>SkillHub: Please Login</title>
+<meta charset="utf-8">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="/style.css">
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+	integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+	integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+	crossorigin="anonymous"></script>
 </head>
 
-<body class="text-center">
+<body th:include="layout :: body" th:with="content=~{::content}">
 
-  <header th:replace="fragments.html :: top">Here goes the header</header>
+	<header th:replace="fragments.html :: top">Here goes the
+		header</header>
+
+	<!-- not used...
+<body class="text-center">
+-->
+
+
+
+	<div th:fragment="content">
+		<form name="f" th:action="@{/login}" method="post">
+			<fieldset>
+				<legend>Please Login</legend>
+				<div th:if="${param.error}" class="alert alert-error">Invalid
+					username and password.</div>
+				<div th:if="${param.logout}" class="alert alert-success">You
+					have been logged out.</div>
+				<label for="username">Username</label> <input type="text"
+					id="username" name="username" /> <label for="password">Password</label>
+				<input type="password" id="password" name="password" />
+				<div class="form-actions">
+					<button type="submit" class="btn">Log in</button>
+				</div>
+			</fieldset>
+		</form>
+	</div>
+
+
+
+
+
+	<!-- NOT used in login... =======================================================================>
 
   <main role="main" class="inner cover">
     <br>
 		<br>
     <h1 class="cover-heading">Account has beed deleted.</h1>
     <br>
-		<br>
-    <a href="/" class="btn btn-secondary">Back to Homepage</a>
-    <br>
-		<br>
-		<br>
-		<a href="/users" class="btn btn-secondary">Return to the list (For Martin: delete later)</a>
-		<br>
+  
 		<br>
   </main>
+  
+-->
 
-  <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
+	<footer th:replace="fragments.html :: bottom">Here goes the
+		footer</footer>
+
+
+
 
 </body>
 
