change in login.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -72,6 +72,24 @@
   
 -->
 
+
+<section>
+				<div class="flex-container container">
+
+					<a href="/users" class="btn btn-primary btn-lg active"
+						role="button" aria-pressed="true">Register</a> <br> <br>
+					<br>
+				</div>
+			</section>
+
+
+
+
+
+
+
+
+
 	<footer th:replace="fragments.html :: bottom">Here goes the
 		footer</footer>
 
