Adapted rights for admin, user and no role

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 			<section>
 				<div class="flex-container container">
 
-					<a href="/users" class="btn btn-primary btn-lg active"
+					<a href="/usersoverview" class="btn btn-primary btn-lg active"
 						role="button" aria-pressed="true">Return to the list (For
 						Martin: delete later)</a> <br> <br> <a href="/user/edit"
 						class="btn btn-primary btn-lg active" role="button"
