correction of a link in footer (to the index page

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -52,7 +52,7 @@
 
 	<!-- Fragment: Footer -->
 	<footer th:fragment="bottom" class="navbar bottom navbar-light bg-light">
-		<a class="navbar-brand" href="index.html">SkillHub</a> <a class="navbar-brand" href="#">Impressum</a> <a
+		<a class="navbar-brand" href="/">SkillHub</a> <a class="navbar-brand" href="#">Impressum</a> <a
 			class="navbar-brand" href="#">Privacy</a> <a class="navbar-brand" href="#">AGBs</a> <a class="navbar-brand"
 			href="#">Contact Us</a>
 		<p class="navbar-brand copyright">Copyright &copy; 2020</p>
