--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -67,15 +67,21 @@ footer {
 	margin-top: 2rem;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.btn-block {
+    display: block;
+    width: 100%;
 }
 
 .btn-primary{
 	display: felx;
 	justify-content: center;
+}
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .backbutton {
