--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/" xmlns:sec="http://www.thymeleaf.org/extras/spring-security5">
 
 <head>
 	<title>SkillHub</title>
@@ -37,8 +37,8 @@
 							Skills </a></li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="#" th:href="@{/login}" sec:authorize="!isAuthenticated()">Login</a>
-						<a class="nav-link" href="#" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
+						<a class="nav-link" th:href="@{/login}" sec:authorize="!isAuthenticated()">Login</a>
+						<a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
 					</li>
 
 					<li class="nav-item"><a class="nav-link" href="user/edit"> Register
