--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -105,7 +105,7 @@
 								<a class="btn btn-lg btn-primary btn-block" href="user/edit"
 									role="button">Register</a>
 
-							</div>
+d							</div>
 						</div>
 
 						<div class="row no-gutters">
