--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,38 +29,34 @@
 	<main>
 		<!--Jumbotron-->
 		<div class="jumbotron">
-			<img class="img" src="../images/milkyway.jpg" alt="alt">
+		<img class="img" src="../images/milkyway.jpg" alt="alt">
 			<div class="box">
 				<h1 class="display-4" style="color: black">SkillHub</h1>
 				<p class="lead" style="color: black">What are you looking for?</p>
 			</div>
 		</div>
-		</div>
-
-		<body>
-
-			<section>
-				<div class="flex-container container">
-
-					<a href="/usersoverview" class="btn btn-primary btn-lg active"
-						role="button" aria-pressed="true">Return to the list (For
-						Martin: delete later)</a> <br> <br> <a href="/user/edit"
-						class="btn btn-primary btn-lg active" role="button"
-						aria-pressed="true">Create User</a> <br> <br> <a
-						href="/skills" class="btn btn-primary btn-lg active" role="button"
-						aria-pressed="true">Find Skills</a> <br> <br> <a
-						href="/" class="btn btn-primary btn-lg active" role="button"
-						aria-pressed="true">My Skills</a> <br> <br> <a href="/"
-						class="btn btn-primary btn-lg active" role="button"
-						aria-pressed="true">Log Out</a> <br> <br> <a href="/"
-						class="btn btn-primary btn-lg active" role="button"
-						aria-pressed="true">To Index (delete later; test jump)</a> <br>
-					<br>
-				</div>
-			</section>
 
 
-		</body>
+
+		<section>
+			<div class="flex-container container">
+
+				<a href="/usersoverview" class="btn btn-primary btn-lg active"
+					role="button" aria-pressed="true">Return to the list (For
+					Martin: delete later)</a> <br> <br> <a href="/user/edit"
+					class="btn btn-primary btn-lg active" role="button"
+					aria-pressed="true">Create User</a> <br> <br> <a
+					href="/skills" class="btn btn-primary btn-lg active" role="button"
+					aria-pressed="true">Find Skills</a> <br> <br> <a href="/"
+					class="btn btn-primary btn-lg active" role="button"
+					aria-pressed="true">My Skills</a> <br> <br> <a href="/"
+					class="btn btn-primary btn-lg active" role="button"
+					aria-pressed="true">Log Out</a> <br> <br> <a href="/"
+					class="btn btn-primary btn-lg active" role="button"
+					aria-pressed="true">To Index (delete later; test jump)</a> <br>
+				<br>
+			</div>
+		</section>
 
 
 	</main>
