--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -85,7 +85,7 @@
 
 							<div class="col-2"></div>
 
-							<div class="col-">
+							<div class="col-5">
 								<p>If you don't have an user account yet, please register
 									here.</p>
 							</div>
@@ -105,7 +105,7 @@
 								<a class="btn btn-lg btn-primary btn-block" href="user/edit"
 									role="button">Register</a>
 
-d							</div>
+							</div>
 						</div>
 
 						<div class="row no-gutters">
