--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -41,13 +41,13 @@
 					<li class="nav-item"><a class="nav-link" href="#">My
 							Profile </a></li>
 
-					<li class="nav-item"><a class="nav-link" th:href="@{/login}"
+					<!--<li class="nav-item"><a class="nav-link" th:href="@{/login}"
 						sec:authorize="!isAuthenticated()">Login</a> <a class="nav-link"
 						th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
 					</li>
 
 					<li class="nav-item"><a class="nav-link" href="user/edit">
-							Register </a></li>
+							Register </a></li>-->
 
 				</ul>
 			</div>
