--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -38,7 +38,7 @@
 					<li class="nav-item"><a class="nav-link" href="/skills">Find
 							Skills</a></li>
 
-					<li class="nav-item"><a class="nav-link" href="#">My
+					<li class="nav-item"><a class="nav-link" href="/user/profile">My
 							Profile </a></li>
 
 					<!--<li class="nav-item"><a class="nav-link" th:href="@{/login}"
