Avatar Foto auf My Profile hinzugefügt

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -15,6 +15,10 @@ body {
   object-fit: cover;
 }
 
+.avatar{
+  border-radius: 50%;
+}
+
 .jumbotron {
   position: relative;
   max-height: 500px;
