--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,7 @@
 
 <body>
 	<!-- Fragment: Header -->
-	<header th:fragment="top">
+	<header th:fragment="top (iurl)">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 			<a class="navbar-brand" href="/">SkillHub</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -38,7 +38,7 @@
 					<li class="nav-item"><a class="nav-link" href="/skills">Find
 							Skills</a></li>
 
-					<li class="nav-item"><a class="nav-link" href="/user/profile">My
+					<li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link" href="/user/profile">My
 							Profile </a></li>
 
 					<!--<li class="nav-item"><a class="nav-link" th:href="@{/login}"
@@ -75,13 +75,14 @@
 					class="btn btn-outline-secondary btn-sm" th:href="@{/logout}"
 					sec:authorize="isAuthenticated()"><span
 						sec:authentication="name"></span> </a></li>
+					
+					<!-- th:with="iurl=${imageurl}?${imageurl}:''"-->	
+						
+				<li><img class="avatar" sec:authorize="hasRole('ROLE_USER')"
+					th:src="@{${'/images/' + iurl}}" alt=" "
+					style="width: 80px"></li>
 
-			</ul>
-
-			<!-- Ende: LogIn / LogOut  ============================================================== -->
-
-
-
+				<!-- Ende: LogIn / LogOut  ============================================================== -->
 		</nav>
 	</header>
 
