Fix error in fragments.html

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,7 @@
 
 <body>
 	<!-- Fragment: Header -->
-	<header th:fragment="top (iurl)">
+	<header th:fragment="top">
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 			<a class="navbar-brand" href="/">SkillHub</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
