--- a/src/main/resources/templates/user/deleted.html
+++ b/src/main/resources/templates/user/deleted.html
@@ -32,7 +32,7 @@
     <br>
 		<br>
 		<br>
-		<a href="/users" class="btn btn-secondary">Return to the list (For Martin: delete later)</a>
+		<a href="/usersoverview" class="btn btn-secondary">Return to the list (For Martin: delete later)</a>
 		<br>
 		<br>
   </main>
