--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,11 +35,9 @@
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
 
-					<li class="nav-item"><a class="nav-link" href="/skills">Find
-							Skills</a></li>
+					<li class="nav-item"><a class="nav-link" href="/skills">Find Skills</a></li>
 
-					<li class="nav-item"><a class="nav-link" href="#">My
-							Profile </a></li>
+					<li class="nav-item"><a class="nav-link" href="#">My Profile </a></li>
 
 					<!--<li class="nav-item"><a class="nav-link" th:href="@{/login}"
 						sec:authorize="!isAuthenticated()">Login</a> <a class="nav-link"
